Fix for deleted users (#2828)